--- a/test/fixtures/timers.yml
+++ b/test/fixtures/timers.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  time: 
+  time: 1
 
 two:
-  time: 
+  time: 1000
