--- a/test/fixtures/timers.yml
+++ b/test/fixtures/timers.yml
@@ -1,7 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  time: 1
+  created_at: <%= Time.zone.now %>
+  email: one@example.com
 
 two:
   time: 1000
