--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "counter_app",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "3.5",
     "fullpage.js": "^2.9.7",
     "jquery": "^3.3.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
   }
 }
